[tool.poetry]
name = "hf-transformer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
gpustat = "^1.1.1"
vllm = "^0.4.0.post1"

[tool.poetry.scripts]
start = "hf_transformer.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
